Bug 1523710 - convert certain Alerts section controllers replacement of PhBugs, ModifyAlertSummaryCtrl and EditAlertSummaryNotesCtrl' Create AlertHeader components

--- a/ui/partials/perf/alertsctrl.html
+++ b/ui/partials/perf/alertsctrl.html
@@ -38,82 +38,7 @@
     No alerts for framework "{{filterOptions.framework.name}}" with status "{{filterOptions.status.text}}"
   </p>
   <div class="card alert-summary" ng-repeat="alertSummary in alertSummaries" ng-if="alertSummary.anyVisible">
-    <div class="card-header alert-summary-heading">
-      <div class="alert-summary-header-element">
-        <input type="checkbox" ng-disabled="!user.isStaff" ng-model="alertSummary.allSelected" ng-change="selectNoneOrSelectAll(alertSummary)"/><!-- select 'em all checkbox -->
-      </div>
-      <div class="alert-summary-title">
-        <a class="anchor" href="#/alerts?id={{alertSummary.id}}" ng-class="{'alert-summary-title-invalid': alertSummary.status==4}">
-          Alert #{{alertSummary.id}} - {{alertSummary.repository}} - {{getTitle(alertSummary)}} <span class="fas fa-external-link-alt icon-superscript"/>
-        </a>
-        <br/>
-        {{alertSummary.resultSetMetadata.dateStr}}
-        ·
-        <span ng-if="alertSummary.resultSetMetadata && alertSummary.resultSetMetadata" title="{{alertSummary.resultSetMetadata.comments}}" uib-dropdown>
-          <button id="push-dropdown" class="btn btn-link dropdown" uib-dropdown-toggle data-toggle="dropdown">
-            {{alertSummary.resultSetMetadata.revision | limitTo: 12}}
-          </button>
-          <ul class="uib-dropdown-menu" uib-dropdown-menu aria-labelledby="push-dropdown">
-            <li role="menuitem"><a href="{{alertSummary.jobsURL}}" target="_blank" rel="noopener" class="dropdown-item">Jobs</a></li>
-            <li role="menuitem"><a href="{{alertSummary.pushlogURL}}" target="_blank" rel="noopener" class="dropdown-item">Pushlog</a></li>
-          </ul>
-        </span>
-        <span ng-show="alertSummary.bug_number"> ·
-          <a ng-href="{{getIssueTrackerUrl(alertSummary)}}" target="_blank" rel="noopener">
-            Bug {{alertSummary.bug_number}}
-          </a>
-        </span>
-        <span ng-if="!alertSummary.resultSetMetadata || !alertSummary.resultSetMetadata" class="text-danger">
-          <!-- This shouldn't happen in production, only in development -->
-          Unknown revision(s)
-        </span>
-      </div>
-      <div class="alert-summary-header-element">
-      </div>
-      <div class="alert-summary-header-element alert-summary-date">
-        <div class="btn-group" uib-dropdown>
-          <button id="status-dropdown" class="btn btn-link status-dropdown" uib-dropdown-toggle data-toggle="dropdown">
-{{getAlertSummaryStatusText(alertSummary)}}
-          </button>
-          <ul class="uib-dropdown-menu" uib-dropdown-menu aria-labelledby="status-dropdown">
-            <li role="menuitem">
-              <a ng-click="copyTextToClipboard(alertSummary)" class="dropdown-item">Copy Summary</a>
-            </li>
-            <li role="menuitem" ng-show="!alertSummary.bug_number">
-              <a ng-click="fileBug(alertSummary)" class="dropdown-item">File bug</a>
-            </li>
-            <li role="menuitem" ng-show="!alertSummary.bug_number && user.isStaff">
-              <a ng-click="linkToBug(alertSummary)" class="dropdown-item">Link to bug</a>
-            </li>
-            <li role="menuitem" ng-show="alertSummary.bug_number && user.isStaff">
-              <a ng-click="unlinkBug(alertSummary)" class="dropdown-item">Unlink from bug</a>
-            </li>
-            <li role="menuitem" ng-show="user.isStaff">
-              <a ng-click="editAlertSummaryNotes(alertSummary)" class="dropdown-item">
-                <span ng-if="!alertSummary.notes">Add notes</span>
-                <span ng-if="alertSummary.notes">Edit notes</span>
-              </a>
-            </li>
-            <li role="menuitem" ng-show="user.isStaff" ng-if="isResolved(alertSummary)">
-              <a ng-click="alertSummaryMarkAs(alertSummary, phAlertSummaryStatusMap.INVESTIGATING)" class="dropdown-item">Re-open</a>
-            </li>
-            <li role="menuitem" ng-show="user.isStaff"
-                ng-if="alertSummaryIsOfState(alertSummary, phAlertSummaryStatusMap.INVESTIGATING) || (isResolved(alertSummary) && !alertSummaryIsOfState(alertSummary, phAlertSummaryStatusMap.WONTFIX))">
-              <a ng-click="alertSummaryMarkAs(alertSummary, phAlertSummaryStatusMap.WONTFIX)" class="dropdown-item">Mark as "won't fix"</a>
-            </li>
-            <li role="menuitem" ng-show="user.isStaff"
-                ng-if="alertSummaryIsOfState(alertSummary, phAlertSummaryStatusMap.INVESTIGATING) || (isResolved(alertSummary) && !alertSummaryIsOfState(alertSummary, phAlertSummaryStatusMap.BACKEDOUT))">
-              <a ng-click="alertSummaryMarkAs(alertSummary, phAlertSummaryStatusMap.BACKEDOUT)" class="dropdown-item">Mark as backed out</a>
-            </li>
-            <li role="menuitem" ng-show="user.isStaff"
-                ng-if="alertSummaryIsOfState(alertSummary, phAlertSummaryStatusMap.INVESTIGATING) || (isResolved(alertSummary) && !alertSummaryIsOfState(alertSummary, phAlertSummaryStatusMap.FIXED))">
-              <a ng-click="alertSummaryMarkAs(alertSummary, phAlertSummaryStatusMap.FIXED)" class="dropdown-item">Mark as fixed</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
+    <alert-table alert-summary="alertSummary" user="user" repos="repos"></alert-table>
     <table class="table table-compact compare-table">
       <tr ng-repeat="alert in alertSummary.alerts | orderBy: ['-starred', 'title']" ng-show="alert.visible">
         <td class="alert-checkbox">
