--- a/ui/css/perf.css
+++ b/ui/css/perf.css
@@ -319,8 +319,8 @@ th {
 .button-panel {
   position: sticky;
   bottom: 0;
-  z-index: 1030;
-  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 900;
+  /* background-color: rgba(0, 0, 0, 0.2); */
 }
 
 .alerts-container {
